# co2-sensor-scd4x-with-raspberry-pi-pico.cpp

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  main.hpp  scd4x.cpp  scd4x.hpp
